// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pre translation to code fence addjs 1`] = `
"

\`\`\`js
angular.module(‘example’)
	.controller(‘ExampleCtrl’, function() {
});
\`\`\`

"
`;

exports[`pre translation to code fence addjs2 1`] = `
"

\`\`\`ts
import {Component, View} from 'angular2/angular2';

@Component({
  selector: 'example'
})

@View({
  templateUrl: './components/example/example.html'
})

export class Example {}
\`\`\`

"
`;

exports[`pre translation to code fence it translates addjs links 1`] = `
"Angular 1.x: 

\`\`\`js
angular.module(‘example’)
	.controller(‘ExampleCtrl’, function() {
});
\`\`\`

 Angular 2.0: 

\`\`\`ts
import {Component, View} from 'angular2/angular2';

@Component({
  selector: 'example'
})

@View({
  templateUrl: './components/example/example.html'
})

export class Example {}
\`\`\`
"
`;

exports[`pre translation to code fence it translates pre block with language 1`] = `
"\`\`\`groovy
import groovy_xml_MarkupBuilder
def xml = new MarkupBuilder
\`\`\`
"
`;
